hphp/test/slow/object/const/not_on_static_prop.hhas.expectf
Fatal error: Assembler Error: line 18: static properties may not be const in %s/not_on_static_prop.hhas on line -1
